--- a/LoizBootSpringDemo/src/main/resources/application.properties
+++ b/LoizBootSpringDemo/src/main/resources/application.properties
@@ -24,6 +24,8 @@
 #spring.jpa.hibernate.ddl-auto=create-drop
 
 #spring.h2.console.enabled=true
+server.servlet.contextPath=/LoizBootSpringDemo
+#server.port=8081
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
