--- a/LoizBootSpringDemo/pom.xml
+++ b/LoizBootSpringDemo/pom.xml
@@ -62,6 +62,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<outputDirectory>C:\Program Files\Apache Software Foundation\Tomcat 8.5\webapps\</outputDirectory>
+				</configuration>
+			</plugin>
+
+
 		</plugins>
 	</build>
 
