--- a/LoizBootSpringDemo/pom.xml
+++ b/LoizBootSpringDemo/pom.xml
@@ -66,10 +66,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
-					<outputDirectory>C:\Program Files\Apache Software Foundation\Tomcat 8.5\webapps\</outputDirectory>
+					<outputDirectory>C:\Program Files\Apache Software Foundation\tomcat-8.0.53\webapps\</outputDirectory>
 				</configuration>
 			</plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
 
 		</plugins>
 	</build>
